@@ -1,5 +1,7 @@
 *SVN*
 
+* Resources: url_for([parent, child]) generates /parents/1/children/2 for the nested resource. Likewise with the other simply helpful methods like form_for and link_to.  #6432 [mhw, Jonathan Vaught]
+
 * Assume html format when rendering partials in RJS. #8076 [Rick]
 
 * Don't double-escape url_for in views.  #8144 [Rich Collins, Josh Peek]
